refactor: Replace manual textarea focus with `autoFocus` prop in `ChatInput` and update tests accordingly.

--- a/Google Workspace Studio×Gmail×Geminiで追客漏れゼロを実現する営業パイプライン自動化フロー/sales-pipeline-automation-site/index.html
+++ b/Google Workspace Studio×Gmail×Geminiで追客漏れゼロを実現する営業パイプライン自動化フロー/sales-pipeline-automation-site/index.html
@@ -575,8 +575,8 @@
         <div class="hero-content">
             <div class="hero-badge">Google Workspace Studio Course</div>
             <h1 class="hero-title">
-                追客漏れゼロを実現する<br>
-                <span class="hero-title-accent">営業パイプライン自動化</span>
+                Google Workspace Studio× Gmail × Geminiで<br>
+                <span class="hero-title-accent">"追客漏れゼロ" を実現する営業パイプライン自動化フロー</span>
             </h1>
             <p class="hero-description">
                 Google Workspace Studio と Gemini を活用して、営業メール業務を80%効率化。
