--- a/Google Workspace Studio×Gmail×Geminiで追客漏れゼロを実現する営業パイプライン自動化フロー/sales-pipeline-automation-site/lesson5.html
+++ b/Google Workspace Studio×Gmail×Geminiで追客漏れゼロを実現する営業パイプライン自動化フロー/sales-pipeline-automation-site/lesson5.html
@@ -120,39 +120,40 @@
             z-index: 1;
         }
 
-        .hero-label {
+        .hero-badge {
             display: inline-flex;
             align-items: center;
             gap: 0.5rem;
-            background: var(--accent-gradient);
-            color: white;
-            padding: 0.5rem 1.25rem;
-            border-radius: 25px;
-            font-size: 0.85rem;
+            padding: 0.5rem 1rem;
+            background: var(--bg-card);
+            border: 1px solid var(--border-light);
+            border-radius: 100px;
+            font-size: 0.75rem;
             font-weight: 600;
+            color: var(--accent-primary);
             margin-bottom: 1.5rem;
+            box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
         }
 
         .hero-title {
-            font-size: clamp(2rem, 4vw, 3rem);
-            font-weight: 700;
-            line-height: 1.3;
+            font-size: clamp(2rem, 5vw, 3rem);
+            font-weight: 800;
+            letter-spacing: -0.03em;
+            line-height: 1.2;
             margin-bottom: 1rem;
-            color: var(--text-primary);
         }
 
-        .hero-title span {
-            display: block;
-            font-size: 0.5em;
-            font-weight: 500;
-            color: var(--text-secondary);
-            margin-top: 0.75rem;
+        .hero-title-accent {
+            background: var(--accent-gradient);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            background-clip: text;
         }
 
-        .hero-desc {
-            font-size: 1.1rem;
+        .hero-description {
+            font-size: 1.125rem;
             color: var(--text-secondary);
-            max-width: 600px;
+            max-width: 700px;
             line-height: 1.8;
         }
 
@@ -833,12 +834,12 @@
 
     <div class="hero">
         <div class="hero-content">
-            <div class="hero-label">最終回 第5回 / 全5回</div>
+            <div class="hero-badge">第5回（最終回） / 全5回</div>
             <h1 class="hero-title">
-                キーワード監視で確度高い案件を逃さない
-                <span>"使える営業フロー"に仕上げる最終調整</span>
+                キーワード監視で確度高い案件を逃さない！<br>
+                <span class="hero-title-accent">"使える営業フロー"に仕上げる最終調整</span>
             </h1>
-            <p class="hero-desc">
+            <p class="hero-description">
                 営業キーワードを自動監視して高確度案件を即座に検知。
                 4つのエージェントを統合し、追客漏れゼロの営業フローを完成させます。
             </p>
