Please provide the file changes (diffs) so I can generate a commit message.

--- a/Google Workspace Studio×Gmail×Geminiで追客漏れゼロを実現する営業パイプライン自動化フロー/sales-pipeline-automation-site/lesson4.html
+++ b/Google Workspace Studio×Gmail×Geminiで追客漏れゼロを実現する営業パイプライン自動化フロー/sales-pipeline-automation-site/lesson4.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>第4回：営業資料を自動で蓄積＆可視化！ | 営業パイプライン自動化フロー</title>
-    <meta name="description" content="添付ファイル自動保存 × 週次レポートで営業活動を見える化">
+    <title>第4回：提案資料と見積書を完全自動整理！ | 営業パイプライン自動化フロー</title>
+    <meta name="description" content="Drive保存 × 定期送信フローで営業資料を整流化">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&family=Noto+Sans+JP:wght@300;400;500;600;700;900&display=swap" rel="stylesheet">
@@ -681,8 +681,8 @@
         <div class="hero-content">
             <div class="hero-badge">第4回 / 全5回</div>
             <h1 class="hero-title">
-                営業資料を自動で蓄積＆可視化！<br>
-                <span class="hero-title-accent">添付ファイル自動保存 × 週次レポートで営業活動を見える化</span>
+                提案資料と見積書を完全自動整理！<br>
+                <span class="hero-title-accent">Drive保存 × 定期送信フローで営業資料を整流化</span>
             </h1>
             <p class="hero-description">
                 2つの独立したエージェントを作成します。1つ目は添付ファイルの自動保存、
