feat: Add validation for chunk retrieval query parameters using a dedicated schema.

--- a/Google Workspace Studio×Gmail×Geminiで追客漏れゼロを実現する営業パイプライン自動化フロー/sales-pipeline-automation-site/lesson4.html
+++ b/Google Workspace Studio×Gmail×Geminiで追客漏れゼロを実現する営業パイプライン自動化フロー/sales-pipeline-automation-site/lesson4.html
@@ -685,15 +685,15 @@
                 <span class="hero-title-accent">Drive保存 × 定期送信フローで営業資料を整流化</span>
             </h1>
             <p class="hero-description">
-                2つの独立したエージェントを作成します。1つ目は添付ファイルの自動保存、
-                2つ目はスプレッドシートを読み込んで週次レポートを生成するエージェントです。
+                2つの独立したエージェントを作成します。1つ目は提案書・見積書の自動保存、
+                2つ目はスプレッドシートを読み込んで週次レポートを定期送信するエージェントです。
             </p>
 
             <div class="comparison-grid" style="margin-top: 2.5rem;">
                 <div class="comparison-card before">
                     <div class="comparison-header" style="color: var(--coral); margin-bottom: 1rem;">BEFORE：受講前</div>
                     <ul style="list-style: none; font-size: 0.9375rem; color: var(--text-secondary);">
-                        <li style="padding: 0.5rem 0;">添付ファイルがメールに埋もれる</li>
+                        <li style="padding: 0.5rem 0;">提案書・見積書がメールに埋もれる</li>
                         <li style="padding: 0.5rem 0;">「あの見積書どこ？」と探す時間</li>
                         <li style="padding: 0.5rem 0;">今週何をやったか振り返れない</li>
                         <li style="padding: 0.5rem 0;">営業活動が見えない</li>
@@ -702,7 +702,7 @@
                 <div class="comparison-card after">
                     <div class="comparison-header" style="color: var(--green); margin-bottom: 1rem;">AFTER：受講後</div>
                     <ul style="list-style: none; font-size: 0.9375rem; color: var(--text-secondary);">
-                        <li style="padding: 0.5rem 0;">添付ファイルが自動でDriveに蓄積</li>
+                        <li style="padding: 0.5rem 0;">提案書・見積書が自動でDriveに整理</li>
                         <li style="padding: 0.5rem 0;">週次レポートで活動を振り返り</li>
                         <li style="padding: 0.5rem 0;">どの顧客と活発にやり取りしているか一目瞭然</li>
                     </ul>
@@ -728,11 +728,11 @@
                 <tbody>
                     <tr>
                         <td><strong>作業1</strong></td>
-                        <td>添付ファイル自動保存エージェントの作成</td>
+                        <td>提案資料・見積書の自動保存エージェントの作成</td>
                     </tr>
                     <tr>
                         <td><strong>作業2</strong></td>
-                        <td>週次レポートエージェントの作成</td>
+                        <td>週次レポート定期送信エージェントの作成</td>
                     </tr>
                 </tbody>
             </table>
@@ -744,18 +744,18 @@
         </div>
     </section>
 
-    <!-- 作業1：添付ファイル自動保存エージェント -->
+    <!-- 作業1：提案資料・見積書の自動保存エージェント -->
     <section class="section" id="agent1" style="background: var(--bg-secondary);">
         <div class="section-container">
             <div class="section-header">
                 <div class="section-label">Agent 1</div>
-                <h2 class="section-title">添付ファイル自動保存エージェント</h2>
-                <p class="section-description">重要顧客からの添付ファイルを自動でGoogle Driveに保存し、通知を送ります。</p>
+                <h2 class="section-title">提案資料・見積書の自動保存エージェント</h2>
+                <p class="section-description">重要顧客からの提案書・見積書などの営業資料を自動でGoogle Driveに保存し、通知を送ります。</p>
             </div>
 
             <div class="warning">
                 <div class="warning-title">事前準備：Driveフォルダの作成</div>
-                <p>Google Driveに<strong>「営業資料」</strong>フォルダを作成してください。添付ファイルはこのフォルダに保存されます。</p>
+                <p>Google Driveに<strong>「営業資料」</strong>フォルダを作成してください。提案書・見積書はこのフォルダに保存されます。</p>
             </div>
 
             <h3 style="margin: 2rem 0 1rem; font-size: 1.125rem;">フロー</h3>
@@ -772,12 +772,12 @@
                 <div class="step-card">
                     <div class="step-number">01</div>
                     <h3>Gmailスターター設定</h3>
-                    <p>「Gmail - Email received」を選択。重要顧客からの添付ファイル付きメールを対象にします。</p>
+                    <p>「Gmail - Email received」を選択。重要顧客からの営業資料付きメールを対象にします。</p>
                 </div>
                 <div class="step-card">
                     <div class="step-number">02</div>
                     <h3>Driveステップ（保存）</h3>
-                    <p>「Drive - Upload file」で添付ファイルをDriveの「営業資料」フォルダに保存します。</p>
+                    <p>「Drive - Upload file」で提案書・見積書をDriveの「営業資料」フォルダに保存します。</p>
                 </div>
                 <div class="step-card">
                     <div class="step-number">03</div>
@@ -787,14 +787,14 @@
             </div>
 
             <h3 style="margin: 2rem 0 1rem; font-size: 1.125rem;">Step 1: Gmailスターター設定</h3>
-            <p style="margin-bottom: 1rem; color: var(--text-secondary);">重要顧客から添付ファイル付きメールを受信したときに起動します。</p>
+            <p style="margin-bottom: 1rem; color: var(--text-secondary);">重要顧客から提案書・見積書などの添付ファイル付きメールを受信したときに起動します。</p>
 
             <div class="code-block">(from:yamada@a-corp.co.jp OR from:tanaka@b-inc.com) has:attachment</div>
 
             <div class="note">
                 <div class="note-title">設定のコツ</div>
                 <ul>
-                    <li><code>has:attachment</code> で添付ファイル付きメールのみ対象</li>
+                    <li><code>has:attachment</code> で提案書・見積書などの添付ファイル付きメールのみ対象</li>
                     <li>重要顧客のメールアドレスを <code>from:</code> で指定</li>
                     <li>複数の送信者は <code>OR</code> で連結</li>
                 </ul>
@@ -816,12 +816,12 @@
                 </tr>
                 <tr>
                     <td>ファイル</td>
-                    <td><code>{attachment}</code>（メールの添付ファイル）</td>
+                    <td><code>{attachment}</code>（メールの提案書・見積書）</td>
                 </tr>
             </table>
 
             <h3 style="margin: 2rem 0 1rem; font-size: 1.125rem;">Step 3: Chat DMステップ（通知）</h3>
-            <div class="code-block">📁 添付ファイルを保存しました
+            <div class="code-block">📁 営業資料を保存しました
 
 【送信者】{sender_name} ({sender_email})
 【件名】{email_subject}
@@ -832,13 +832,13 @@
         </div>
     </section>
 
-    <!-- 作業2：週次レポートエージェント -->
+    <!-- 作業2：週次レポート定期送信エージェント -->
     <section class="section" id="agent2">
         <div class="section-container">
             <div class="section-header">
                 <div class="section-label">Agent 2</div>
-                <h2 class="section-title">週次レポートエージェント</h2>
-                <p class="section-description">スプレッドシートのデータを読み込み、Geminiで分析して週次レポートを生成します。</p>
+                <h2 class="section-title">週次レポート定期送信エージェント</h2>
+                <p class="section-description">スプレッドシートのデータを読み込み、Geminiで分析して週次レポートを定期送信します。</p>
             </div>
 
             <div class="warning">
@@ -917,12 +917,12 @@
                 <div class="step-card">
                     <div class="step-number">03</div>
                     <h3>Geminiステップ（分析）</h3>
-                    <p>ログデータを分析して、営業活動のサマリーを生成します。</p>
+                    <p>ログデータを分析して、提案書・見積書の整理状況サマリーを生成します。</p>
                 </div>
                 <div class="step-card">
                     <div class="step-number">04</div>
-                    <h3>Chat DMステップ（送信）</h3>
-                    <p>週次レポートをChat DMで自分に送信します。</p>
+                    <h3>Chat DMステップ（定期送信）</h3>
+                    <p>週次レポートをChat DMで定期送信します。</p>
                 </div>
             </div>
 
@@ -985,21 +985,21 @@
             </div>
 
             <div class="code-block">以下は今週の営業資料ログデータです。
-このデータを分析して、営業活動の週次レポートを作成してください。
+このデータを分析して、提案書・見積書の整理状況レポートを作成してください。
 
 ログデータ:
 {sheets_data}
 
 以下の形式で出力してください：
 
-📊 今週の営業活動レポート
+📊 今週の営業資料レポート
 
 【今週の概要】
-- 保存されたファイル数と主な種類（提案書、見積書など）を要約
+- 保存された資料数と主な種類（提案書、見積書など）を要約
 
 【活発な商談】
-- 送信者名/会社ごとにファイル数を集計
-- 複数のファイルがある顧客は特に注目
+- 送信者名/会社ごとに資料数を集計
+- 複数の資料がある顧客は特に注目
 
 【資料の種類別集計】
 - 提案書: X件
@@ -1033,10 +1033,10 @@
 
             <div class="output-example">
                 <h4>レポート出力例</h4>
-                <div class="output-content">📊 今週の営業活動レポート
+                <div class="output-content">📊 今週の営業資料レポート
 
 【今週の概要】
-今週は10件のファイルが保存されました。
+今週は10件の資料が保存されました。
 提案書3件、見積書3件、契約書2件、その他2件と、複数の商談が活発に動いています。
 
 【活発な商談】
@@ -1062,7 +1062,7 @@
 ⭐ A社は提案書を複数回改訂中。顧客の要望を確認してください。</div>
             </div>
 
-            <h3 style="margin: 2rem 0 1rem; font-size: 1.125rem;">Step 4: Chat DMステップ（レポート送信）</h3>
+            <h3 style="margin: 2rem 0 1rem; font-size: 1.125rem;">Step 4: Chat DMステップ（レポート定期送信）</h3>
             <div class="code-block">{weekly_report}
 
 ---
@@ -1087,9 +1087,9 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td>添付ファイル保存</td>
+                        <td>提案書・見積書の保存</td>
                         <td>手動でダウンロード・アップロード</td>
-                        <td>自動でDriveに蓄積</td>
+                        <td>自動でDriveに整理</td>
                     </tr>
                     <tr>
                         <td>資料の検索</td>
@@ -1120,8 +1120,8 @@
 
             <div class="tips-grid">
                 <div class="tip-card">
-                    <h4>添付ファイル自動保存</h4>
-                    <p>フォルダが整理しやすいよう、顧客別サブフォルダを作成しても良いでしょう。大量のファイルが溜まったら、定期的に整理することをお勧めします。</p>
+                    <h4>提案資料・見積書の自動保存</h4>
+                    <p>フォルダが整理しやすいよう、顧客別サブフォルダを作成しても良いでしょう。大量の資料が溜まったら、定期的に整理することをお勧めします。</p>
                 </div>
                 <div class="tip-card">
                     <h4>週次レポートの活用</h4>
