--- a/Google Workspace Studio×Geminiで候補者連絡を自動化する！CX向上型採用オペレーションフロー/cx-recruitment-operation-site/index.html
+++ b/Google Workspace Studio×Geminiで候補者連絡を自動化する！CX向上型採用オペレーションフロー/cx-recruitment-operation-site/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CX向上型採用オペレーションフロー | Google Workspace Studio</title>
-    <meta name="description" content="Google Workspace Studio × Geminiで候補者連絡を自動化する！CX向上型採用オペレーションフロー">
+    <title>Google Workspace Studio × Geminiで候補者連絡を自動化する！"CX向上型" 採用オペレーションフロー</title>
+    <meta name="description" content="Google Workspace Studio × Geminiで候補者連絡を自動化する！"CX向上型" 採用オペレーションフロー">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&family=Noto+Sans+JP:wght@300;400;500;600;700;900&display=swap" rel="stylesheet">
@@ -575,8 +575,8 @@
         <div class="hero-content">
             <div class="hero-badge">Google Workspace Studio Course</div>
             <h1 class="hero-title">
-                候補者連絡を自動化する<br>
-                <span class="hero-title-accent">CX向上型採用オペレーション</span>
+                候補者連絡を自動化する！<br>
+                <span class="hero-title-accent">"CX向上型" 採用オペレーションフロー</span>
             </h1>
             <p class="hero-description">
                 Google Workspace Studio と Gemini を活用して、採用業務を70%効率化。
@@ -652,9 +652,9 @@
                 <a href="lesson1.html" class="curriculum-item">
                     <div class="curriculum-number">01</div>
                     <div class="curriculum-content">
-                        <h3 class="curriculum-title">採用業務の手作業が消えない理由を見抜く</h3>
+                        <h3 class="curriculum-title">採用業務の手作業が消えない理由を見抜く！候補者連絡フローの全体像を理解する</h3>
                         <p class="curriculum-description">
-                            候補者連絡フローの全体像を理解する。採用業務の課題を整理し、6つのエージェントによる自動化の全体像を把握します。
+                            採用業務の課題を整理し、6つのエージェントによる自動化の全体像を把握します。
                         </p>
                     </div>
                     <svg class="curriculum-arrow" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
@@ -664,9 +664,9 @@
                 <a href="lesson2.html" class="curriculum-item">
                     <div class="curriculum-number">02</div>
                     <div class="curriculum-content">
-                        <h3 class="curriculum-title">面接前準備を自動化！</h3>
+                        <h3 class="curriculum-title">面接前準備を自動化！カレンダー × Gemini × Chatで候補者へ必要情報を自動送信する</h3>
                         <p class="curriculum-description">
-                            カレンダー×Gemini×Chatで候補者へ必要情報を自動送信する。面接前日に候補者サマリーと履歴書リンクを面接官に自動配信します。
+                            面接前日に候補者サマリーと履歴書リンクを面接官に自動配信します。
                         </p>
                     </div>
                     <svg class="curriculum-arrow" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
@@ -676,9 +676,9 @@
                 <a href="lesson3.html" class="curriculum-item">
                     <div class="curriculum-number">03</div>
                     <div class="curriculum-content">
-                        <h3 class="curriculum-title">面接後作業をゼロにする！</h3>
+                        <h3 class="curriculum-title">面接後作業をゼロにする！要約＆評価ポイントをGmail/Chatへ自動送信するフローを作る</h3>
                         <p class="curriculum-description">
-                            要約＆評価ポイントをGmail・Chatへ自動送信するフローを作る。面接終了をトリガーに、評価依頼と次ステップ案内を自動化します。
+                            面接終了をトリガーに、評価依頼と次ステップ案内を自動化します。
                         </p>
                     </div>
                     <svg class="curriculum-arrow" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
@@ -688,9 +688,9 @@
                 <a href="lesson4.html" class="curriculum-item">
                     <div class="curriculum-number">04</div>
                     <div class="curriculum-content">
-                        <h3 class="curriculum-title">遅延しない採用運用！</h3>
+                        <h3 class="curriculum-title">遅延しない採用運用！面接リマインド・評価提出リマインドを自動化する</h3>
                         <p class="curriculum-description">
-                            面接リマインド・評価提出リマインドを自動化する。3種類のリマインドと24h・48h・72hエスカレーションを実装します。
+                            3種類のリマインドと24h・48h・72hエスカレーションを実装します。
                         </p>
                     </div>
                     <svg class="curriculum-arrow" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
@@ -700,9 +700,9 @@
                 <a href="lesson5.html" class="curriculum-item">
                     <div class="curriculum-number">05</div>
                     <div class="curriculum-content">
-                        <h3 class="curriculum-title">採用オペレーションを完全自動化！</h3>
+                        <h3 class="curriculum-title">採用オペレーションを完全自動化！選考フロー全体をStudioで一本化する方法</h3>
                         <p class="curriculum-description">
-                            選考フロー全体をStudioで一本化する方法。6つのエージェントを統合し、日次ダッシュボードと運用ルールを設計します。
+                            6つのエージェントを統合し、日次ダッシュボードと運用ルールを設計します。
                         </p>
                     </div>
                     <svg class="curriculum-arrow" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
